--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ img {
     </div>
 
     <div class="div3">
-      <img src="C:\Users\joshn\Downloads\hci_finals_lauresta\chris-ried-ieic5Tq8YMk-unsplash-scaled-modified.png" height="15%"> 
+      <img src="chris-ried-ieic5Tq8YMk-unsplash-scaled-modified.png" height="15%"> 
       <h1>Web Development Basics</h1>
       <p style="font-size: 30px;">
         Mastering web development starts with a solid understanding of HTML, CSS, and JavaScript. These core technologies allow you to structure, style, and add interactivity to your websites. Consistency, clean code practices, and staying updated with new trends are essential to growing as a developer.
