--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ img {
     <div class="div1">
       <h1>WELCOME TO MY WEBSITE</h1>
 <center>
-      <img src="C:\Users\joshn\Downloads\hci_finals_lauresta\div1 img-modified.png" height="40%">
+      <img src=div1 img-modified.png height="40%">
 </center>
       <p style="font-size: 60px;">Hi, I'm Josh Lauresta — a Passionate Programmer</p>
     </div>
