--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ img {
     <div class="div1">
       <h1>WELCOME TO MY WEBSITE</h1>
 <center>
-      <img src=div1 img-modified.png height="40%">
+      <img src="div1 img-modified.png" height="40%">
 </center>
       <p style="font-size: 60px;">Hi, I'm Josh Lauresta — a Passionate Programmer</p>
     </div>
@@ -127,7 +127,7 @@ img {
     </div>
 
     <div class="div4">
-      <img src="C:\Users\joshn\Downloads\hci_finals_lauresta\b863e2b4-253f-42cc-970c-dac8b12908d9-modified.png" height="15%"> 
+      <img src="b863e2b4-253f-42cc-970c-dac8b12908d9-modified.png" height="15%"> 
       <h1>Learning Through Practice</h1>
       <p style="font-size: 30px;">
         Programming is a skill that grows with consistent practice and curiosity. Start by building small projects, debugging your code, and learning from others. Over time, these habits help develop not just technical skills but also logical thinking and creative problem-solving.
