--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ img {
     </div>
 
     <div class="div3">
-      <img src="chris-ried-ieic5Tq8YMk-unsplash-scaled-modified.png" height="15%"> 
+      <img src="chris-ried-ieic5Tq8YMk-unsplash-scaled-modified.png" width="15%" height="15%" style="float:left; margin-left: 20px;"> 
       <h1>Web Development Basics</h1>
       <p style="font-size: 30px;">
         Mastering web development starts with a solid understanding of HTML, CSS, and JavaScript. These core technologies allow you to structure, style, and add interactivity to your websites. Consistency, clean code practices, and staying updated with new trends are essential to growing as a developer.
@@ -127,7 +127,7 @@ img {
     </div>
 
     <div class="div4">
-      <img src="b863e2b4-253f-42cc-970c-dac8b12908d9-modified.png" height="15%"> 
+      <img src="b863e2b4-253f-42cc-970c-dac8b12908d9-modified.png" width="15%" height="15%" style="float:right; margin-right: 20px;"> 
       <h1>Learning Through Practice</h1>
       <p style="font-size: 30px;">
         Programming is a skill that grows with consistent practice and curiosity. Start by building small projects, debugging your code, and learning from others. Over time, these habits help develop not just technical skills but also logical thinking and creative problem-solving.
