--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       color: #fff;
     }
 img {
-  max-width: 300px;
-  height: 300px;
+  max-width: 200px;
+  height: 200px;
 }
 
     .div1 {
@@ -38,6 +38,11 @@ img {
 
     .div4 {
       background-color: #333;
+      padding: 20px;
+      color: #fff;
+    }
+    .divx {
+      background-color: #111;
       padding: 20px;
       color: #fff;
     }
@@ -132,6 +137,9 @@ img {
       <p style="font-size: 30px;">
         Programming is a skill that grows with consistent practice and curiosity. Start by building small projects, debugging your code, and learning from others. Over time, these habits help develop not just technical skills but also logical thinking and creative problem-solving.
       </p>
+    </div>
+
+  <div class="divx">
       <h1>Want to connect and talk code?</h1>
       <p style="font-size: 30px;">Feel free to email me about web development or programming!</p>
       <a href="mailto:laurestajosh26@gmail.com" class="button-5" role="button">Email Me</a>
