--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ img {
     <div class="div1">
       <h1>WELCOME TO MY WEBSITE</h1>
 <center>
-      <img src="div1 img-modified.png" height="300px" height="300px">
+      <img src="div1 img-modified.png" width="30%" height="30%">
 </center>
       <p style="font-size: 60px;">Hi, I'm Josh Lauresta — a Passionate Programmer</p>
     </div>
