--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ img {
     <div class="div4">
       <img src="b863e2b4-253f-42cc-970c-dac8b12908d9-modified.png" width="15%" height="15%" style="float:right; margin-right: 20px;"> 
       <h1>Learning Through Practice</h1>
-      <p style="font-size: 30px;">
+      <p style="font-size: 30px; font-color: green">
         Programming is a skill that grows with consistent practice and curiosity. Start by building small projects, debugging your code, and learning from others. Over time, these habits help develop not just technical skills but also logical thinking and creative problem-solving.
       </p>
     </div>
